@@ -18,30 +18,14 @@
 
 package com.exedio.cops;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.security.Principal;
-import java.util.Enumeration;
-import java.util.Locale;
-import java.util.Map;
-
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletInputStream;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-
-final class EnvironmentRequest implements HttpServletRequest
+final class EnvironmentRequest
 {
-	final String environment;
-	
-	EnvironmentRequest(final String environment)
+	private EnvironmentRequest()
 	{
-		this.environment = environment;
+		// prevent instantiation
 	}
 	
-	String getURL(final Boolean needsSecure, final String url)
+	static String getURL(final String environment, final Boolean needsSecure, final String url)
 	{
 		final boolean secure = needsSecure!=null && needsSecure.booleanValue();
 		
@@ -61,284 +45,5 @@ final class EnvironmentRequest implements HttpServletRequest
 		
 		return (secure ? "https://" : "http://") + e + '/' + url;
 		
-	}
-
-	public String getAuthType()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getContextPath()
-	{
-		throw new RuntimeException();
-	}
-
-	public Cookie[] getCookies()
-	{
-		throw new RuntimeException();
-	}
-
-	public long getDateHeader(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public String getHeader(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	@Deprecated
-	public Enumeration<?> getHeaderNames()
-	{
-		throw new RuntimeException();
-	}
-
-	@Deprecated
-	public Enumeration<?> getHeaders(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public int getIntHeader(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public String getMethod()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getPathInfo()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getPathTranslated()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getQueryString()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getRemoteUser()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getRequestURI()
-	{
-		throw new RuntimeException();
-	}
-
-	public StringBuffer getRequestURL()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getRequestedSessionId()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getServletPath()
-	{
-		throw new RuntimeException();
-	}
-
-	public HttpSession getSession()
-	{
-		throw new RuntimeException();
-	}
-
-	public HttpSession getSession(boolean arg0)
-	{
-		throw new RuntimeException();
-	}
-
-	public Principal getUserPrincipal()
-	{
-		throw new RuntimeException();
-	}
-
-	public boolean isRequestedSessionIdFromCookie()
-	{
-		throw new RuntimeException();
-	}
-
-	public boolean isRequestedSessionIdFromURL()
-	{
-		throw new RuntimeException();
-	}
-
-	@Deprecated
-	public boolean isRequestedSessionIdFromUrl()
-	{
-		throw new RuntimeException();
-	}
-
-	public boolean isRequestedSessionIdValid()
-	{
-		throw new RuntimeException();
-	}
-
-	public boolean isUserInRole(String arg0)
-	{
-		throw new RuntimeException();
-	}
-
-	public Object getAttribute(String arg0)
-	{
-		throw new RuntimeException();
-	}
-
-	@Deprecated
-	public Enumeration<?> getAttributeNames()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getCharacterEncoding()
-	{
-		throw new RuntimeException();
-	}
-
-	public int getContentLength()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getContentType()
-	{
-		throw new RuntimeException();
-	}
-
-	public ServletInputStream getInputStream() throws IOException
-	{
-		throw new IOException();
-	}
-
-	public String getLocalAddr()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getLocalName()
-	{
-		throw new RuntimeException();
-	}
-
-	public int getLocalPort()
-	{
-		throw new RuntimeException();
-	}
-
-	public Locale getLocale()
-	{
-		throw new RuntimeException();
-	}
-
-	@Deprecated
-	public Enumeration<?> getLocales()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getParameter(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	@Deprecated
-	public Map<?,?> getParameterMap()
-	{
-		throw new RuntimeException();
-	}
-
-	@Deprecated
-	public Enumeration<?> getParameterNames()
-	{
-		throw new RuntimeException();
-	}
-
-	public String[] getParameterValues(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public String getProtocol()
-	{
-		throw new RuntimeException();
-	}
-
-	public BufferedReader getReader() throws IOException
-	{
-		throw new IOException();
-	}
-
-	@Deprecated
-	public String getRealPath(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public String getRemoteAddr()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getRemoteHost()
-	{
-		throw new RuntimeException();
-	}
-
-	public int getRemotePort()
-	{
-		throw new RuntimeException();
-	}
-
-	public RequestDispatcher getRequestDispatcher(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public String getScheme()
-	{
-		throw new RuntimeException();
-	}
-
-	public String getServerName()
-	{
-		throw new RuntimeException();
-	}
-
-	public int getServerPort()
-	{
-		throw new RuntimeException();
-	}
-
-	public boolean isSecure()
-	{
-		throw new RuntimeException();
-	}
-
-	public void removeAttribute(String arg0)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public void setAttribute(String arg0, Object arg1)
-	{
-		throw new RuntimeException(arg0);
-	}
-
-	public void setCharacterEncoding(String arg0)
-			throws UnsupportedEncodingException
-	{
-		throw new UnsupportedEncodingException(arg0);
 	}
 }
